--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "main": "index.html",
   "devDependencies": {
     "coffee-script": "latest",
+    "html-minify": "latest",
     "sqwish": "latest",
     "stylus": "latest",
     "uglify-js": "latest"
