Use myth for cross-browser compatibility
See http://www.myth.io/ for more info

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": "index.html",
   "devDependencies": {
     "coffee-script": "latest",
-    "sqwish": "latest",
+    "myth": "latest",
     "stylus": "latest",
     "uglify-js": "latest"
   },
