Use 'squish' to minify css
It removes unneeded ';'s; myth is still useful for vendor prefixing.

--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "devDependencies": {
     "coffee-script": "latest",
     "myth": "latest",
+    "sqwish": "latest",
     "stylus": "latest",
     "uglify-js": "latest"
   },
